@@ -1102,12 +1102,13 @@ runAbsoluteCN <- function(normal.coverage.file = NULL,
         candidates = candidate.solutions, 
         results = results, 
         input = list(tumor = tumor.coverage.file, normal = normal.coverage.file, 
-            log.ratio = GRanges(normal[, 1], on.target=normal$on.target, log.ratio = log.ratio), 
+            log.ratio = GRanges(normal[, 1], on.target=normal$on.target, log.ratio = log.ratio),
             log.ratio.sdev = sd.seg, vcf = vcf, sampleid = sampleid, 
             test.num.copy = test.num.copy,
             sex = sex, sex.vcf = sex.vcf, chr.hash = chr.hash, centromeres = centromeres,
             mapping.bias.rho = if (is.null(rho) || all(is.na(rho))) NULL else mean(rho, na.rm = TRUE),
             vcf.field.prefix = vcf.field.prefix,
+            interval.file = interval.file,
             args=list(
                 filterVcf = args.filterVcf[vapply(args.filterVcf, object.size, double(1)) < 1000],
                 filterIntervals = args.filterIntervals[vapply(args.filterIntervals, object.size, double(1)) < 1000])
